Updated Mostly Things

--- a/index.html
+++ b/index.html
@@ -3,20 +3,70 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Title & Description -->
+  <title>Raveena Tarot | Tarot Card Reading & Spiritual Guidance</title>
+  <meta name="description"
+    content="Raveena Tarot Starr offers expert tarot readings & spiritual guidance to bring clarity, love, career insights & life solutions.">
+
+  <!-- Keywords -->
+  <meta name="keywords"
+    content="Raveena Tarot, Tarot Reading, Tarot Card Reader, Spiritual Guidance, Tarot Online, Love Tarot, Career Tarot, Astrology, Psychic Reading, Raveena Tarot Starr">
+
+  <!-- Robots -->
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="English">
+  <meta name="author" content="Raveena Tarot Starr">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://www.raveenatarotstarr.com/" />
+
+  <!-- Favicon (SVG Logo as Icon) -->
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml;utf8,
+    <svg xmlns='http://www.w3.org/2000/svg' width='26' height='40' fill='none'>
+      <path d='M3.726 10.42L23.416 11.746C23.929 11.78 24.329 12.196 24.321 12.709C24.299 14.034 24.157 16.522 23.448 18.134C22.328 20.68 21.184 22.166 18.722 23.469C16.655 24.562 15.175 24.667 12.836 24.585C10.862 24.515 9.666 24.358 7.904 23.469C4.86 21.934 3.681 19.827 2.474 16.645C2.007 15.417 1.791 13.731 1.69 12.402C1.603 11.252 2.576 10.342 3.726 10.419Z' fill='rgb(129,81,123)'/>
+      <path d='M7.45 0.271L20.18 3.622C20.677 3.752 20.992 4.238 20.878 4.738C20.674 5.637 20.287 7.014 19.692 7.877C18.64 9.399 17.707 10.227 15.937 10.768C14.45 11.223 13.47 11.106 11.955 10.758C10.675 10.465 9.915 10.212 8.875 9.41C7.082 8.025 6.577 6.5 6.19 4.27C6.02 3.29 6.134 1.964 6.255 1.05C6.33 0.48 6.893 0.125 7.45 0.272ZM2.124 23.808L24.029 25.287C25.053 25.357 25.856 26.19 25.813 27.216C25.746 28.793 25.526 31.066 24.843 32.621C23.569 35.523 22.269 37.217 19.469 38.702C17.119 39.949 15.434 40.069 12.775 39.975C10.53 39.896 9.17 39.715 7.165 38.702C3.704 36.952 2.363 34.552 0.99 30.924C0.425 29.431 0.182 27.344 0.078 25.791C0.001 24.64 0.973 23.731 2.124 23.808Z' fill='rgb(91,38,85)'/>
+    </svg>" />
+
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Lora:ital,wght@0,400..700;1,400..700&family=Noto+Sans+Devanagari:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Space+Grotesk:wght@300..700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Lora:ital,wght@0,400..700;1,400..700&family=Noto+Sans+Devanagari:wght@100..900&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&family=Space+Grotesk:wght@300..700&family=Work+Sans:wght@400;500;600;700&display=swap');
   </style>
-  <title>Raveena Tarot</title>
 
+  <!-- Open Graph / Social Media SEO -->
+  <meta property="og:title" content="Raveena Tarot | Tarot Card Reading & Spiritual Guidance">
+  <meta property="og:description"
+    content="Book a tarot reading session with Raveena Tarot Starr and find clarity in love, career, and life. Trusted spiritual guidance for your journey.">
+  <meta property="og:image" content="https://www.raveenatarotstarr.com/logo.png">
+  <meta property="og:url" content="https://www.raveenatarotstarr.com/">
+  <meta property="og:type" content="website">
+
+  <!-- Contact Info (SEO Rich Snippet) -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Raveena Tarot Starr",
+      "url": "https://www.raveenatarotstarr.com/",
+      "logo": "https://www.raveenatarotstarr.com/logo.png",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+91-9008408625",
+        "contactType": "customer service",
+        "email": "Raveenatarotstarr@gmail.com"
+      },
+      "sameAs": [
+        "https://www.instagram.com/raveenatarotstarr"
+      ]
+    }
+  </script>
 </head>
 
 <body>
   <div id="root"></div>
-
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
